# dnsure

./: .env  Dockerfile  README.md  docker-compose.yml  index.html  main.py  nginx.conf  package.json  pyproject.toml  runDB.txt  schema.py  schemas.py
agents/: Dockerfile  README.md  agent.uuid  agent_utils.py  main.py  requirements.txt  schemas.py
backend/: Dockerfile  README.md  docker-compose.yml  env_docker  main.py  pyproject.toml  schema.py
client/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
client/src/app/: App.tsx  main.tsx
client/src/app/styles/: fonts.css  index.css
client/src/components/: CheckBox.tsx  ThemeBtn.tsx
client/src/pages/: About.tsx  Home.tsx  Result.tsx
client/src/shared/: api.ts  config.tsx  utils.ts
client/src/stores/: globalStore.ts
client/src/widgets/: Header.tsx  Sidebar.tsx  TestForm.tsx
manage/: arch.txt
server/: README.md  init.sql  pyproject.toml  requirements.txt
